--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ server.port=8886
 spring.datasource.url=jdbc:postgresql://postgres:5432/twitchdrops
 spring.datasource.username=postgres
 # spring.datasource.password is set as an environment variable
+server.ssl.key-store=keystore.p12
+server.ssl.key-store-password=
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=tomcat
+security.require-ssl=true
