Manually setting DB timezone

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ server.ssl.key-store-password=
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
 security.require-ssl=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
